# game

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md
src/: main.cc  utils.cc  utils.h
src/assets/: payload.txt
src/assets/shaders/demo/: fragment.glsl  vertex.glsl
src/ecs/: CMakeLists.txt  entity.cc  entity.h  entity_factory.cc  entity_factory.h  entity_test.cc
src/math/: CMakeLists.txt  math.cc  math.h
src/render/: CMakeLists.txt  render_system.cc  render_system.h
